# solar-system

./: .gitmodules  CMakeLists.txt
shaders/: default.frag  default.vert  light.frag  light.vert
src/: main.cpp
src/camera/: camera.cpp  camera.hpp
src/glad/: glad.c
src/rendering/shader/: shader.cpp  shader.hpp
src/rendering/window/: window.cpp  window.hpp
src/rendering/window/EBO/: EBO.cpp  EBO.hpp
src/rendering/window/VAO/: VAO.cpp  VAO.hpp
src/rendering/window/VBO/: VBO.cpp  VBO.hpp
src/rendering/window/mesh/: mesh.cpp  mesh.hpp
src/rendering/window/model/: model.cpp  model.hpp
src/rendering/window/texture/: texture.cpp  texture.hpp
src/shader/: shader.cpp  shader.hpp
src/simulation/: simulation.cpp  simulation.hpp
src/utilities/: colour_output.hpp  utilities.cpp  utilities.hpp
